# MenoChat

./: .gitignore  Gemma4_E2B_Menochat.ipynb  README.md
Backend_utils/: audio_denoise.py  audio_denoise_runner.py  chainlit_app_3.py  chainlit_app_cpu.py  chainlit_app_depr.py  comorbidity.py  denoise.py  denoise_runner.py  deploy_tts.sh  llm_utils.py  llm_utils_cpp_dep.py  llm_utils_vllm.py  load_vector_db.py  load_vector_dbre.py  local_storage_client.py  pyproject.toml  run.sh  telegram_inside_chainlit.py  tts_server.py  utils.py
Backend_utils/.chainlit/: config.toml
Backend_utils/TTS_env/: pyvenv.cfg
Backend_utils/load_models/: load_llm.py
Backend_utils/menochat_diseases/: diseases_USER.txt
Backend_utils/menochat_evals/: 00e7a69e-0b12-40e4-9c3d-2d3b8e28e6b6_20260513.jsonl  0383ff2b-6e17-491f-8b25-f3681b3a2c08_20260513.jsonl  07a96c73-16ee-4a79-acc4-33827d166576_20260513.jsonl  15f977ee-6437-43be-b6aa-3c8db9be84a6_20260513.jsonl  1623a691-2d3b-44e3-a46b-39f8b78be234_20260512.jsonl  18dad808-03eb-4c6a-b643-51d6186e784f_20260513.jsonl  1b9d6ec9-76a6-42f5-a96e-af0729f9fd73_20260513.jsonl  22bce775-b1f0-40f5-b714-e7b1f8b3a781_20260513.jsonl  25504092-3c29-4c89-bee6-11c75b905e12_20260513.jsonl  28e0926b-d0c3-4458-bbfa-4b7ef4377dca_20260513.jsonl  2bc6efed-0cf0-4845-9835-857bee87536c_20260513.jsonl  2c1027db-3d91-46ef-845d-b4ef250b7617_20260513.jsonl  35f360dd-d749-4a09-bfab-bda40bbb960a_20260513.jsonl  3b374401-5cc2-40c5-8740-eaf498af9982_20260513.jsonl  40742675-0ace-4973-bf8a-80f638c21d6c_20260513.jsonl  417a3762-a998-433b-850a-4cf0cc884532_20260512.jsonl  (+42 more)
(+91 files in other folders)
