[project]
name = "chainlit-menochat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg==0.30.0",
    "bcrypt==3.2.2",
    "boto3==1.40.19",
    "chainlit==2.6.9",
    "fastapi==0.116.1",
    "fpdf==1.7.2",
    "huggingface-hub==0.34.4",
    "jose>=1.0.0",
    "numpy>=1.22,<2.0",
    "openai>=2.26.0",
    "protobuf==6.32.0",
    "pydantic==2.11.7",
    "pydub==0.25.1",
    "pyjwt==2.10.1",
    "python-jose==3.5.0",
    "phonemizer",
    "aiohttp",
    "sqlalchemy==2.0.43",
    "tqdm==4.67.1",
    "torch",
    "transformers<5",
    "soundfile",
    "FlagEmbedding",
    "faiss-cpu",
    "voxcpm",
    "hf_transfer",
    "soxr",
    "einops",
    "einx",
    "omegaconf",
    "unsloth",
    "python-telegram-bot>=21",
    "httpx>=0.27",
    "soundfile",
    "python-dotenv",
    "regex"
]
